# design/design.go
@@ -5,6 +5,8 @@ import (
 	. "github.com/goadesign/goa/design/apidsl"
 )
 
+const DefineTrait = "DefineTrait"
+
 var _ = API("appengine", func() {
 	Title("The appengine example")
 	Description("A simple appengine example")
@@ -16,6 +18,12 @@ var _ = API("appengine", func() {
 		MaxAge(600)
 		Credentials()
 	})
+	Trait(DefineTrait, func() {
+		Response(Unauthorized, ErrorMedia)
+		Response(NotFound, ErrorMedia)
+		Response(BadRequest, ErrorMedia)
+		Response(InternalServerError, ErrorMedia)
+	})
 })
 var _ = Resource("swagger", func() {
 	Origin("*", func() {
@@ -25,31 +33,40 @@ var _ = Resource("swagger", func() {
 	Files("swagger/*filepath", "../static/swagger/")
 })
 
-var Account = MediaType("application/vnd.account+json", func() {
-	Description("Account")
+var User = MediaType("application/vnd.user+json", func() {
+	Description("user")
 	Attributes(func() {
-		Attribute("id", Integer, "id", func() {
-			Example(1)
+		Attribute("id", Any, "id(int64)", func() {
+			Example(4909628655665152)
+		})
+		Attribute("id_str", String, "id(string)", func() {
+			Example("4909628655665152")
 		})
 		Attribute("name", String, "name", func() {
 			Example("John")
 		})
+		Required("id", "id_str", "name")
 	})
 	View("default", func() {
+		Attribute("id")
+		Attribute("id_str")
 		Attribute("name")
-		Required("name")
+		Required("id", "name")
 	})
 })
 
-var _ = Resource("Account", func() {
-	BasePath("/account")
-	DefaultMedia(Account)
+var _ = Resource("User", func() {
+	BasePath("/users")
+	DefaultMedia(User)
 	Action("list", func() {
 		Description("list")
 		Routing(GET(""))
-		Response(OK, CollectionOf(Account))
-		Response(BadRequest, ErrorMedia)
-		Response(InternalServerError, ErrorMedia)
+		Params(func() {
+			Param("name")
+			Required("name")
+		})
+		Response(OK, CollectionOf(User))
+		UseTrait(DefineTrait)
 	})
 	Action("create", func() {
 		Description("create")
@@ -58,50 +75,41 @@ var _ = Resource("Account", func() {
 			Param("name")
 			Required("name")
 		})
-		Response(OK)
-		Response(BadRequest, ErrorMedia)
-		Response(InternalServerError, ErrorMedia)
+		Response(Created, User)
+		UseTrait(DefineTrait)
 	})
 	Action("show", func() {
 		Description("show")
 		Routing(GET("/:id"))
 		Params(func() {
 			Param("id")
-			Param("name")
-			Required("id", "name")
+			Required("id")
 		})
-		Response(OK)
-		Response(BadRequest, ErrorMedia)
-		Response(InternalServerError, ErrorMedia)
+		Response(OK, User)
+		UseTrait(DefineTrait)
 	})
 	Action("update", func() {
 		Description("update")
 		Routing(PUT("/:id"))
 		Params(func() {
-			Param("id", Integer, "id")
+			Param("id")
 			Required("id")
 		})
 		Payload(func() {
 			Param("name")
 			Required("name")
 		})
-		Response(OK)
-		Response(BadRequest, ErrorMedia)
-		Response(InternalServerError, ErrorMedia)
+		Response(OK, User)
+		UseTrait(DefineTrait)
 	})
 	Action("delete", func() {
 		Description("delete")
 		Routing(DELETE("/:id"))
 		Params(func() {
-			Param("id", Integer, "id")
+			Param("id")
 			Required("id")
 		})
-		Payload(func() {
-			Param("name")
-			Required("name")
-		})
-		Response(OK)
-		Response(BadRequest, ErrorMedia)
-		Response(InternalServerError, ErrorMedia)
+		Response(NoContent, User)
+		UseTrait(DefineTrait)
 	})
 })
